--- a/Flamed/Resources/Styles/Colors.xaml
+++ b/Flamed/Resources/Styles/Colors.xaml
@@ -13,6 +13,9 @@
     <Color x:Key="SecondaryDarkText">#9880e5</Color>
     <Color x:Key="Tertiary">#2B0B98</Color>
 
+    <Color x:Key="Danger">#FF3B30</Color>
+    <Color x:Key="Success">#34C759</Color>
+
     <Color x:Key="White">White</Color>
     <Color x:Key="Black">Black</Color>
     <Color x:Key="Magenta">#D600AA</Color>
